# slurm

src/plugins/gres/: Makefile.am
src/plugins/gres/fhgfs/: Makefile.am  gres_fhgfs.c
